# interactive_local_planner

./: CMakeLists.txt  README.md  package.xml
include/interactive_local_planner/: interactive_local_planner.h  obstacle_classifier.h
interactive_local_planner/: CMakeLists.txt  interactive_local_planner_plugin.xml  package.xml
interactive_local_planner/include/interactive_local_planner/: global_planner_interaction.h  interactive_local_planner.h  obstacle_classifier.h
interactive_local_planner/launch/: real_amcl_demo_laptop.launch  sim_amcl_demo.launch  sim_gmapping.launch
interactive_local_planner/launch/includes/: move_base.launch  obstacles_spawner.launch  spawn_room.launch
interactive_local_planner/map/real/: map.pgm  map_bk.pgm
interactive_local_planner/map/sim/: map.pgm
interactive_local_planner/models/wall/: model.sdf
interactive_local_planner/param/: costmap_common_params.yaml  global_costmap_params.yaml  interactive_local_planner_empty_costmap_params.yaml  interactive_local_planner_params.yaml  local_costmap_params.yaml  move_base.yaml  obstacle_classifier_params.yaml  obstacles.yaml
interactive_local_planner/src/: interactive_local_planner.cpp  obstacle_classifier.cpp
interactive_local_planner/src/interactive_local_planner/: global_planner_interaction.cpp
interactive_local_planner/worlds/: room.world
interactive_local_planner_simulated_obstacle/: CMakeLists.txt
interactive_local_planner_simulated_obstacle/models/moving_obstacle/: model.sdf
interactive_local_planner_simulated_obstacle/nodes/: obstacle_controller.py
interactive_local_planner_simulated_obstacle/src/interactive_local_planner_simulated_obstacle/: moving_obstacle_controller.py
launch/: amcl_demo.launch  real_amcl_demo.launch  sim_amcl_demo.launch
launch/includes/: move_base.launch
map/: my_map.pgm  my_map.yaml  my_map_new.yaml
map/sim/: map.pgm
param/: costmap_common_params.yaml  global_planner_params.yaml  interactive_local_planner_empty_costmap_params.yaml  interactive_local_planner_params.yaml  move_base.yaml  move_base_params.yaml  obstacle_classifier_params.yaml
planner_demo/: CMakeLists.txt  README.md  package.xml
planner_demo/launch/: demo.launch
planner_demo/map/: map.pgm
rviz/: navigation.rviz
src/: interactive_local_planner.cpp  obstacle_classifier.cpp
