<?xml version="1.0"?>
<package format="2">
  <name>interactive_local_planner</name>
  <version>0.0.0</version>
  <description>The interactive_local_planner package</description>

  <maintainer email="cristipiticul@yahoo.com">Cristian Militaru</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dwa_local_planner</build_depend>
  <build_depend>base_local_planner</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_export_depend>dwa_local_planner</build_export_depend>
  <build_export_depend>base_local_planner</build_export_depend>
  <build_export_depend>cmake_modules</build_export_depend>
  <build_export_depend>costmap_2d</build_export_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <build_export_depend>nav_core</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>dwa_local_planner</exec_depend>
  <exec_depend>base_local_planner</exec_depend>
  <exec_depend>cmake_modules</exec_depend>
  <exec_depend>costmap_2d</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>nav_core</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <nav_core plugin="${prefix}/interactive_local_planner_plugin.xml" />
  </export>
</package>
